--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,15 @@
 
   "name": "Jisho-OJAD",
   "description": "Add pitch accent display to Jisho",
-  "version": "1.2",
+  "version": "1.3",
 
   "background": {
     "scripts": ["jquery.js", "parse.js", "background.js"]
   },
 
   "content_scripts": [
-    { "matches": [ "http://jisho.org/search/*", "http://www.jisho.org/search/*" ],
+    { "matches": [ "http://jisho.org/search/*", "http://www.jisho.org/search/*",
+                "https://jisho.org/search/*", "https://www.jisho.org/search/*" ],
       "js": ["jquery.js", "content.js"],
       "css": ["content.css"]
     }
